[package]
name = "spk-tools"
version = "0.1.0"
authors = ["Kazuki Yamashita"]
license = "MIT"
rust-version = "1.86.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
colored = { version = "2.2.0" }
console = { version = "0.16.0" }
rand = { version = "0.9.2" }
stoatformat = { git = "https://github.com/Ciekce/stoatformat" }
